Bug 691848 - FAPI/FreeType error on font
Summary: FAPI/FreeType error on font
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Font API (show other bugs)
Version: master
Hardware: PC Windows Vista
: P4 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-20 09:12 UTC by Ken Sharp
Modified: 2010-12-20 16:39 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
sample file (385.74 KB, application/postscript)
2010-12-20 09:13 UTC, Ken Sharp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ken Sharp 2010-12-20 09:12:52 UTC
The attached file causes FAPI+FreeType to error out with a typecheck. Disabling FAPI removes the problem (at the expense of incorrect text). Acrobat Distiller also converts the file to PDF without error, and with the same text as the non-FAPI case.

The problem seems to be caused by a fallback inside the FAPI code. In zfapi.c around line 2308, the code takes a different path with the second glyph, it looks like this should push a BuildChar on the exec stack and execute it, but in fact it doesn't do so. It instead proceeds directly to fapi_finish_render which immediately throws a typecheck error.
Comment 1 Ken Sharp 2010-12-20 09:13:36 UTC
Created attachment 7050 [details]
sample file
Comment 2 Chris Liddell (chrisl) 2010-12-20 16:39:11 UTC
fixed in r11963