When we're handling a Type42 font in FAPI, handle the possibility that the "CharString" we get might be a null object, by falling back to the notdef glyph.

Bug 691848

No cluster differences expected.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11963 a1074d23-0009-0410-80fe-cf8c14f379e6